syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.open.su";
option java_outer_classname = "TicketGrpcProto";

package ticket;

service TicketGrpc {
  rpc ListTickets(ListTicketsRequest) returns (ListTicketsResponse) {}
  rpc GetTicketDetails(GetTicketDetailsRequest) returns (GetTicketDetailsResponse) {}
  rpc AttendEvent(AttendEventRequest) returns (AttendEventResponse) {}
  rpc ShotgunBus(ShotgunBusRequest) returns (ShotgunBusResponse) {}
  rpc UpdateTicket(UpdateTicketRequest) returns (UpdateTicketResponse) {}
  rpc DeleteTicket(DeleteTicketRequest) returns (DeleteTicketResponse) {}
  rpc InviteGuest(InviteGuestRequest) returns (InviteGuestResponse) {}
}

message ListTicketsRequest {
  optional int32 page = 1;
  optional int32 size = 2;
  optional string sort = 3;
  optional string order = 4;
  optional string eventId = 5;
  optional string busId = 6;
  optional string attendeeId = 7;
}

message ListTicketsResponse {
  string id = 1;
  string eventId = 2;
  string busId = 3;
  string attendeeId = 4;
  bool vip = 5;
  string status = 6;
}

message GetTicketDetailsRequest {
  string id = 1;
}

message GetTicketDetailsResponse {
  string id = 1;
  string eventId = 2;
  string busId = 3;
  string attendeeId = 4;
  bool vip = 5;
  string status = 6;
  string created_at = 7;
  string updated_at = 8;
}

message AttendEventRequest {
  string eventId = 1;
}

message AttendEventResponse {
  string id = 1;
}

message ShotgunBusRequest {
  string busId = 1;
}

message ShotgunBusResponse {
  string id = 1;
}

message UpdateTicketRequest {
  string id = 1;
  optional bool vip = 5;
}

message UpdateTicketResponse {
  string id = 1;
}

message DeleteTicketRequest {
  string id = 1;
}

message DeleteTicketResponse {}

message InviteGuestRequest {
  string eventId = 1;
  string attendeeId = 2;
}

message InviteGuestResponse {
  string id = 1;
}
